# cheap-fluids

./: Cargo.toml
derive_macros/: Cargo.toml
derive_macros/src/: lib.rs
examples/: egui_demo.rs
src/: container.rs  fluid.rs  fluid_container.rs  fluid_port.rs  lib.rs  system.rs
src/fluid/: default_fluids.rs
tests/: statup_test.rs
