[package]
name = "bevy_cheap_fluids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.60"
bevy-trait-query = "0.5.1"
bevy_egui = "0.27"

[dependencies.bevy]
version = "0.13"
features = [
    "dynamic_linking",
]