[package]
name = "bevy_cheap_fluids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.64"
bevy_egui = "0.29"

[dependencies.bevy]
version = "0.14.2"
features = [
    "dynamic_linking",
]
